@@ -232,6 +232,7 @@ Version 1.3
  - Issue #698 - Add config file for Vision CP3102 from Erik-NA (Justin)
  - Issue #692 - Add Wenzhou TZ68 config file from gsolem (Justin)
  - DotNet Wrapper fix for GetAllScenese from Bas Prins (Justin)
+ - Issue #688 - Qubino ZMNHDD1 Z-Wave Plus flush dimmer from bbqkees (Justin)
 
 Version 1.2 
  - Released on 15/10/14
